test/Parse/ConditionalCompilation/noneOSTarget.code
// RUN: %language -typecheck %s -verify -target arm64-apple-none-macho -parse-stdlib
// RUN: %language-ide-test -test-input-complete -source-filename=%s -target arm64-apple-none-macho

#if !_runtime(_multithreaded)
  fn underNoThreads() {
    foo() // expected-error {{cannot find 'foo' in scope}}
  }
#endif
